<resources>
    <string name="app_name">디미고인</string>

    <string name="student_card">학생증</string>
    <string name="mobile_student_card">모바일 학생증</string>
    <string name="ingang">인강실</string>
    <string name="main">메인</string>
    <string name="meal">급식표</string>
    <string name="timetable">시간표</string>
    <string name="attendance_state">자습 현황</string>
    <string name="night_study">야간자율학습</string>
    <string name="time_format">%s %d시 %02d분</string>
    <string name="time_range_format">%02d:%02d - %02d:%02d</string>
    <string name="night_study_1">야간자율학습 1타임</string>
    <string name="night_study_2">야간자율학습 2타임</string>
    <string name="night_study_n">야간자율학습 %d타임</string>
    <string name="after_school_n">방과후 %d타임</string>
    <string name="location_class">교실</string>
    <string name="location_health">안정실</string>
    <string name="location_ingang">인강실</string>
    <string name="location_laundry">세탁</string>
    <string name="location_club">동아리</string>
    <string name="location_etc">기타</string>
    <string name="grade_class_format">%d학년 %d반</string>
    <string name="date_format">M월 d일 E요일</string>
    <string name="meal_failed_message">급식 정보가 없습니다.</string>
    <string name="meal_loading_message">급식 정보를 불러오는 중입니다</string>
    <string name="notice_loading_message">공지사항을 불러오는 중입니다</string>
    <string name="current_number_of_people">현원</string>
    <string name="total_number_of_people">총원</string>
    <string name="apply">신청하기</string>
    <string name="cancel">취소하기</string>
    <string name="remaining_tickets">남은 티켓 %d/%d</string>
    <string name="can_apply">신청가능</string>
    <string name="ingang_applied">%d타임 인강실을 신청했습니다.</string>
    <string name="failed_to_fetch_ingang_status">인강실 정보를 불러오지 못했습니다.</string>
    <string name="failed_to_apply_ingang">인강실을 신청하지 못했습니다.</string>
    <string name="failed_to_cancel_ingang">인강실 신청을 취소하지 못했습니다.</string>
    <string name="places_are_not_loaded">장소 목록을 불러오는 중입니다.</string>
    <string name="where_are_you">어디에 계신가요?</string>
    <string name="change_location_of_student">%s님의 위치를 변경합니다.</string>
    <string name="select_location">위치를 선택해주세요</string>
    <string name="enter_reason">사유를 입력해주세요</string>
    <string name="night_study_student_location">야간자율학습 학생현황</string>
    <string name="location">위치</string>
    <string name="reason">사유</string>
    <string name="selected">선택 완료</string>
    <string name="logout_confirm">정말 로그아웃 하시겠습니까?</string>
    <string name="error_message">오류가 발생했습니다.</string>
    <string name="location_changed">\"%s\"(으)로 변경되었습니다.</string>
    <string name="failed_to_change_location">현재 위치를 변경하지 못했습니다.</string>
    <string name="failed_to_change_location_of_student">%s님의 위치를 변경하지 못했습니다.</string>
    <string name="failed_to_fetch_current_location">현재 위치를 불러오지 못했습니다.</string>
    <string name="failed_to_fetch_places">장소 목록을 불러오지 못했습니다.</string>
    <string name="failed_to_fetch_timetable">시간표를 불러오지 못했습니다.</string>
    <string name="failed_to_fetch_attendance">자습현황를 불러오지 못했습니다.</string>
    <string name="failed_to_fetch_attendance_history">기록을 불러오지 못했습니다.</string>
    <string name="no_attendance_history">기록이 없습니다.</string>
    <string name="not_supported_place">아직 지원하지 않는 장소입니다.</string>
    <string name="ingang_application_time">인강실 신청 시간</string>
    <string name="welcome_student">%s님 환영합니다 :)</string>
    <string name="welcome_teacher">%s 선생님 환영합니다 :)</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="enter_id">아이디를 입력해주세요</string>
    <string name="enter_pw">비밀번호를 입력해주세요</string>
    <string name="forgot_id_pw">아이디 또는 비밀번호를 잊으셨나요?</string>
    <string name="forgot_id_pw_description">계정을 분실하셨다면 본관 1층 교무실 IT 특성화부 하미영 선생님께 문의 하시기 바랍니다</string>
    <string name="login_failed">로그인에 실패했습니다.\n아이디, 비밀번호를 확인해주세요.</string>
    <string name="login_failed_check_network">로그인하지 못했습니다. 네트워크 상태를 확인해주세요.</string>
    <string name="logout_failed_check_network">로그아웃하지 못했습니다. 네트워크 상태를 확인해주세요.</string>
    <string name="today_meal">오늘의 급식</string>
    <string name="next_meal">다음 급식</string>
    <string name="more">더보기</string>
    <string name="dinner">저녁</string>
    <string name="lunch">점심</string>
    <string name="breakfast">아침</string>
    <string name="calendar">일정</string>
    <string name="icon">아이콘</string>
    <string name="title">제목</string>
    <string name="subtitle">부제</string>
    <string name="cancellation">취소</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>

    <string name="mobile_id_card">MOBILE ID CARD</string>
    <string name="remainingTime">남은 시간</string>
    <string name="department">학과</string>
    <string name="student_serial">학번</string>
    <string name="birth_date">생년월일</string>
    <string name="click_this_to_close">이곳을 눌러 닫기</string>
    <string name="prove_student_message">위 사람은 본교 학생임을 증명함</string>
    <string name="touch_to_open_student_card">터치하여 모바일 학생증 열기</string>
    <string name="read_before_use_card">사용 전 다음 내용을 반드시 읽어주세요</string>
    <string name="cannot_use_authentication">인증을 사용할 수 없습니다.\n기기 잠금이 활성화되어 있는지 확인해주세요.</string>
    <string name="authenticate">인증</string>
    <string name="authenticate_to_use_card">학생증을 사용하기 위해 인증이 필요합니다.</string>
    <string name="detail">자세히보기</string>
    <string name="search_with_name">이름으로 검색하기</string>
    <string name="description_type_icon">typeIcon</string>
    <string name="short_detail">자세히</string>
    <string name="card_caution_content">1. 본 증은 학교가 정식 발급한 학생증입니다.\n이외 신분증 등 활용은 활용처의 규정에 따라 달라질 수 있습니다.\n\n2. 본 증은 본인 이외 타인이 소지 또는 활용할 수 없습니다.\n타인에게 양도하여 입은 피해는 본인의 책임입니다.\n\n3. 스크린샷 또는 사본으로 동일한 효력을 발생시킬 수 없습니다.</string>
    <string name="no_info">정보없음</string>
    <string name="history">히스토리</string>
    <string name="attendance_log_format">[%s] %s님이 %s의 현황을 %s(으)로 변경</string>
    <string name="example_name">홍길동</string>
    <string name="example_grade_class_number_of_student">2학년 1반 1번</string>
    <string name="current_location">현재위치</string>
    <string name="format_student_info">%d학년 %d반</string>
    <string name="format_time">HH:mm</string>
    <string name="updatedTime">등록시간</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>

    <string-array name="departments">
        <item>이비즈니스과</item>
        <item>디지털콘텐츠과</item>
        <item>웹프로그래밍과</item>
        <item>해킹방어과</item>
    </string-array>
</resources>
