<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/main">

    <fragment
        android:id="@+id/card"
        android:name="in.dimigo.dimigoin.ui.main.fragment.card.CardFragment"
        android:label="@string/student_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/ingang"
        android:name="in.dimigo.dimigoin.ui.main.fragment.ingang.IngangFragment"
        android:label="@string/ingang"
        tools:layout="@layout/fragment_ingang" />

    <fragment
        android:id="@+id/main"
        android:name="in.dimigo.dimigoin.ui.main.fragment.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/meal"
        android:name="in.dimigo.dimigoin.ui.main.fragment.meal.WeeklyMealFragment"
        android:label="@string/meal"
        tools:layout="@layout/fragment_weekly_meal" />

    <fragment
        android:id="@+id/timetable"
        android:name="in.dimigo.dimigoin.ui.main.fragment.timetable.TimetableFragment"
        android:label="@string/timetable"
        tools:layout="@layout/fragment_timetable" />
</navigation>
