<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/timeText"
        style="@style/Text.Sub.Tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/night_study_1" />

    <TextView
        style="@style/Text.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/where_are_you"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/location"
        app:endIconDrawable="@drawable/ic_right_arrow"
        app:endIconMode="custom"
        app:endIconTint="@color/grey_300">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/selectPlaceEditText"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/reason">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reasonEditText"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
