<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="title"
            type="String" />

        <variable
            name="sub"
            type="String" />

        <variable
            name="icon"
            type="android.graphics.drawable.Drawable" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/subText"
            style="@style/TextStyle.Title.Tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/default_title_top_margin"
            android:text="@{sub}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/subtitle" />

        <TextView
            android:id="@+id/titleText"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@{title}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subText"
            tools:text="@string/title" />

        <ImageButton
            android:id="@+id/titleActionButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/icon"
            android:src="@{icon}"
            android:visibility="@{icon == null ? View.GONE : View.VISIBLE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subText"
            tools:src="@drawable/ic_calendar" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@color/grey_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
