<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="in.dimigo.dimigoin.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="28dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEditText"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:text="@={vm.id}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwEditText"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            app:boxStrokeColor="@color/grey_300">

            <Button
                android:id="@+id/loginButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="@{!vm.isLoginRequested}"
                android:onClick="@{() -> vm.onLoginButtonClick()}"
                android:paddingVertical="16dp"
                android:text="@string/login"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:indeterminateTint="@color/white"
                android:visibility="@{vm.isLoginRequested ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/medium"
            android:text="@string/forgot_id_pw"
            android:textColor="@color/grey_250"
            app:drawableStartCompat="@drawable/ic_information"
            app:drawableTint="@color/grey_250" />

    </LinearLayout>

</layout>
