<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/subTitleText"
            style="@style/Text.Sub.Tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_study_student_location"
            app:layout_constraintBottom_toTopOf="@id/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/titleText"
            style="@style/Text.Sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_location"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitleText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"
        app:layout_constraintTop_toBottomOf="@id/titleLayout" />

    <ScrollView
        android:id="@+id/radioGroupScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@id/titleLayout" />

    <FrameLayout
        android:id="@+id/buttonLayout"
        style="@style/Shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/submitButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_marginVertical="16dp"
            android:text="@string/selected" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
